--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "apen"
-version = "0.1.0"
 authors = ["Name <you@example.com>"]
-edition = "2018"
+version = "1.0"
+edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = {version= "1.5.0", features = ["full"]}
+ahash = "0.8.3"
